clearing empty styles

--- a/css/style.css
+++ b/css/style.css
@@ -237,9 +237,7 @@ header p {
 	color: #616161;
 	transition: all 0.5s;
 }
-#services-section .service:hover>i.fa {
-	/*background: #0b3540;*/
-}
+
 /* Gallery Section 
 ==============================*/
 #works-section {
@@ -353,8 +351,7 @@ ol.type li a:hover {
 }
 .hover-bg:hover .hover-text>h4 {
 	opacity: 1;
-	-webkit-backface-visibility: hidden;
-	-webkit-transform: translateY(0);
+	backface-visibility: hidden;	
 	transform: translateY(0);
 }
 .hover-bg .hover-text>i {
@@ -365,7 +362,7 @@ ol.type li a:hover {
 }
 .hover-bg:hover .hover-text>i {
 	opacity: 1;
-	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 	-webkit-transform: translateY(100%);
 	transform: translateY(100%);
 }
