base color cv modified

--- a/cv/css/base.css
+++ b/cv/css/base.css
@@ -23,8 +23,8 @@
 	
 	/* Variables */
 	:root {
-		--color: #fa8500;		
-		--color-hover: #d87b02;
+		--color: #6667AB;		
+		--color-hover: #4a4b7e;
 		--bg-light: #fff;
 		--bg-dark: rgb(48, 48, 48);
 		--h-lightmode-color: #444;
