--- a/cv/css/elements.css
+++ b/cv/css/elements.css
@@ -191,11 +191,11 @@
 	}
 	
 	body::-webkit-scrollbar-track {
-		background: var(--color);        /* color of the tracking area */
+		background: rgb(54, 54, 54);        /* color of the tracking area */
 	}
 	
 	body::-webkit-scrollbar-thumb {
-		background-color: #000;    /* color of the scroll thumb */
+		background-color: var(--color);    /* color of the scroll thumb */
 		border-radius: 20px;       /* roundness of the scroll thumb */
 		/* border: 3px solid rgb(255, 212, 146);  creates padding around scroll thumb */
 	}
