--- a/cv/css/base.css
+++ b/cv/css/base.css
@@ -250,6 +250,14 @@
 	.ml-7 {
 		margin-left: 7px;
 	}	
+
+	.ml-8 {
+		margin-left: 8px;
+	}
+	
+	.ml-9 {
+		margin-left: 9px;
+	}
 	
 	.hr { 
 		border-top: 1px solid #efefef;  
