--- a/my/base/css/mystyle.css
+++ b/my/base/css/mystyle.css
@@ -48,11 +48,11 @@
 	}
 	
 header h1{
-	font-size:20px;
-	font-family:'Lato', sans-serif;
-	font-weight: 700;
-	letter-spacing:1.2px;
-	margin:0 0 5px 0;
+	font-size: 23px;
+	font-family: "Chakra Petch", serif;
+  font-weight: 900;
+  font-style: normal;
+	text-transform: uppercase;	
 	color: #676767;	
 	}
 	
@@ -74,8 +74,7 @@ header h1{
 
 .linha2 {
 	border-bottom: 1px solid #ABABAB;
-	margin-bottom: 30px;
-	
+	margin-bottom: 30px;	
 	}
 
 .margen-titulo {
