--- a/my/base/css/style-motherbase.css
+++ b/my/base/css/style-motherbase.css
@@ -174,7 +174,10 @@ h1,h2,h3,h4 {
 body {
 	-webkit-font-smoothing:antialiased;
 	-moz-osx-font-smoothing:grayscale;
-	font-family:'Lato', sans-serif;
+	font-family: "Chakra Petch", serif;
+  font-weight: 700;
+  font-style: normal;
+	text-transform: uppercase;	
 	font-size:18px;
 	}
 	
